cluster/gitops/data/postgresql/barman-cloud-plugin/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: plugin-barman-cloud
specs:
  - description: plugin-barman-cloud
    endpointSelector:
      matchLabels:
        app.kubernetes.io/name: plugin-barman-cloud
        app.kubernetes.io/instance: plugin-barman-cloud
    egress:
      # Manage k8s objects
      - toEntities:
          - kube-apiserver
        toPorts:
          - ports:
              - port: "6443"
                protocol: TCP
    ingress:
      # CNPG operator -> plugin CNPG-I gRPC (mTLS)
      - fromEndpoints:
          - matchLabels:
              app.kubernetes.io/name: cloudnative-pg
              app.kubernetes.io/instance: cloudnative-pg
        toPorts:
          - ports:
              - port: "9090"
                protocol: TCP
      # Kubelet probes (controller-runtime health server)
      - fromEntities:
          - host
        toPorts:
          - ports:
              - port: "8081"
                protocol: TCP
